--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Inicio</title>
         
-        <link rel="stylesheet" href="inicio.css">
+        <link rel="stylesheet" href="estilo.css">
     </head>
 
     <body>
